--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'swifthire-frosty-river-6463'
+app = 'swift-hire'
 
 primary_region = 'lhr'
 kill_signal = 'SIGTERM'
