--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -1,18 +1,21 @@
 # See https://fly.io/docs/app-guides/continuous-deployment-with-github-actions/
-
 name: Fly Deploy
+
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+
+concurrency:
+  group: deploy-group
+  cancel-in-progress: true
+
 jobs:
   deploy:
-    name: Deploy app
     runs-on: ubuntu-latest
-    concurrency: deploy-group    # optional: ensure only one action runs at a time
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only
+      - name: Deploy to Fly
+        run: flyctl deploy --remote-only --app swift-hire
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
