--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -3,7 +3,8 @@ name: Fly Deploy
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - main
 
 concurrency:
   group: deploy-group
@@ -13,8 +14,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Check out code
+        uses: actions/checkout@v4
+      - name: Set up flyctl
+        uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Deploy to Fly
         run: flyctl deploy --remote-only --app swift-hire
         env:
