--- a/.github/workflows/worker_us.yml
+++ b/.github/workflows/worker_us.yml
@@ -41,6 +41,5 @@ jobs:
           EMAIL_FROM: ${{ secrets.EMAIL_FROM }}
           SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
           SMTP_PORT: ${{ secrets.SMTP_PORT }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-
+          DATABASE_URL: ${{ secrets.DATABASE_URL_PROXY }}
 
