--- a/fly.toml
+++ b/fly.toml
@@ -39,3 +39,8 @@ kill_timeout = 120
   cpus = 1
   memory_mb = 1024
 
+[mounts]
+  source = "data"
+  destination = "/data"
+[env]
+  DATABASE_PATH = "/data/jobs.db"
