--- a/.github/workflows/worker_us.yml
+++ b/.github/workflows/worker_us.yml
@@ -28,6 +28,9 @@ jobs:
           sleep 3
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      - name: Show outbound IP
+        run: |
+          curl -s https://api.ipify.org
       - name: Run US worker once
         run: |
           python -m worker.main_us
